// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Venue Marker Tooltip should not render any data 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-mzsngu-11 crgofk"
  >
    <div
      class="styledComponents__InfoWindowHeader-sc-mzsngu-13 kIrYde"
    >
      <a
        class="styledComponents__Title-sc-mzsngu-14 ddOpBj"
      >
        Aparna-Venue
      </a>
    </div>
    <div
      class="styledComponents__Wrapper-sc-1abm7iv-2 gGaxUh"
    >
      <div
        class="ant-pro-table"
      >
        <div
          class="ant-pro-card"
        >
          <div
            class="ant-pro-card-body"
            style="padding-top: 0px;"
          >
            <div
              class="ant-table-wrapper"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="ant-table ant-table-middle"
                  >
                    <div
                      class="ant-table-container"
                    >
                      <div
                        class="ant-table-content"
                      >
                        <table
                          style="table-layout: auto;"
                        >
                          <colgroup>
                            <col
                              style="width: 50px;"
                            />
                            <col
                              style="width: 162px;"
                            />
                            <col
                              style="width: 162px;"
                            />
                          </colgroup>
                          <thead
                            class="ant-table-thead"
                          >
                            <tr>
                              <th
                                class="ant-table-cell"
                              />
                              <th
                                class="ant-table-cell"
                              >
                                Networking Devices
                              </th>
                              <th
                                class="ant-table-cell"
                              >
                                Clients
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class="ant-table-tbody"
                          >
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="1"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                Wi-Fi
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center styledComponents__CellWrapper-sc-mzsngu-12 dwFAVF"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No APs
                                  </div>
                                </div>
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center styledComponents__CellWrapper-sc-mzsngu-12 dwFAVF"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No AP Clients
                                  </div>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="2"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                Switch
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center styledComponents__CellWrapper-sc-mzsngu-12 dwFAVF"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No Switches
                                  </div>
                                </div>
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center styledComponents__CellWrapper-sc-mzsngu-12 dwFAVF"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No Switch Clients
                                  </div>
                                </div>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Venue Marker Tooltip should render tooltip without padding 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-mzsngu-11 fKKbMH"
  >
    <div
      class="styledComponents__InfoWindowHeader-sc-mzsngu-13 kIrYde"
    >
      <a
        class="styledComponents__Title-sc-mzsngu-14 ddOpBj"
      >
        Aparna-Venue
      </a>
    </div>
    <div
      class="styledComponents__Wrapper-sc-1abm7iv-2 gGaxUh"
    >
      <div
        class="ant-pro-table"
      >
        <div
          class="ant-pro-card"
        >
          <div
            class="ant-pro-card-body"
            style="padding-top: 0px;"
          >
            <div
              class="ant-table-wrapper"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="ant-table ant-table-middle"
                  >
                    <div
                      class="ant-table-container"
                    >
                      <div
                        class="ant-table-content"
                      >
                        <table
                          style="table-layout: auto;"
                        >
                          <colgroup>
                            <col
                              style="width: 50px;"
                            />
                            <col
                              style="width: 162px;"
                            />
                            <col
                              style="width: 162px;"
                            />
                          </colgroup>
                          <thead
                            class="ant-table-thead"
                          >
                            <tr>
                              <th
                                class="ant-table-cell"
                              />
                              <th
                                class="ant-table-cell"
                              >
                                Networking Devices
                              </th>
                              <th
                                class="ant-table-cell"
                              >
                                Clients
                              </th>
                            </tr>
                          </thead>
                          <tbody
                            class="ant-table-tbody"
                          >
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="1"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                Wi-Fi
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center styledComponents__CellWrapper-sc-mzsngu-12 dwFAVF"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No APs
                                  </div>
                                </div>
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center styledComponents__CellWrapper-sc-mzsngu-12 dwFAVF"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No AP Clients
                                  </div>
                                </div>
                              </td>
                            </tr>
                            <tr
                              class="ant-table-row ant-table-row-level-0"
                              data-row-key="2"
                            >
                              <td
                                class="ant-table-cell"
                              >
                                Switch
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center styledComponents__CellWrapper-sc-mzsngu-12 dwFAVF"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No Switches
                                  </div>
                                </div>
                              </td>
                              <td
                                class="ant-table-cell"
                              >
                                <div
                                  class="ant-space ant-space-horizontal ant-space-align-center styledComponents__CellWrapper-sc-mzsngu-12 dwFAVF"
                                >
                                  <div
                                    class="ant-space-item"
                                  >
                                    No Switch Clients
                                  </div>
                                </div>
                              </td>
                            </tr>
                          </tbody>
                        </table>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
